--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simon Say Game</title>
 
-    <link rel="stylesheet" href="SimonStyle.css"> 
+    <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
     <h1>Simon Say Game</h1>
@@ -27,6 +27,6 @@
 
 
 
-    <script src="SimonApp.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
