--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simon Say Game</title>
 
+    <link rel="icon" href="/logo.jpg">
+
     <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
@@ -35,10 +37,7 @@
     </div>
 
 
-<<<<<<< HEAD
-=======
 
->>>>>>> b8543bbbad7280f735b106b108e1d54b00dfec2b
     <script src="app.js"></script>
 </body>
 </html>
