--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simon Say Game</title>
 
-    <link rel="icon" href="/logo.jpg">
+    <link rel="icon" href="./logo.jpg">
 
     <link rel="stylesheet" href="style.css"> 
 </head>
